fixed contact form alignment

--- a/site/static/css/base.css
+++ b/site/static/css/base.css
@@ -101,14 +101,18 @@ contact page address styles
   font-size: 50px;
   margin-top: 5px;
 }
-.address-name{
-  margin-top:-30px;
+
+.info-title{
+   margin-bottom: 0;
 }
 
 .nav-pills .nav-link.active, .show>.nav-pills .nav-link {
     background-color: #384156;
 }
 
+.description p, p.description {
+    font-size: 1em;
+}
 /*
 font style here
 */
